# DSTI_

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json  setup.sh
dsti-agent/: Cargo.toml
dsti-agent/src/: main.rs  network.rs  process.rs  syscall.rs
dsti-bpf/fs/: Cargo.toml
dsti-bpf/fs/src/: main.rs  vmlinux.rs
dsti-bpf/net/: Cargo.toml
dsti-bpf/net/.cargo/: config.toml
dsti-bpf/net/src/: main.rs
dsti-bpf/proc/: Cargo.toml
dsti-bpf/proc/src/: main.rs
dsti-bpf/syscall/: Cargo.toml
dsti-bpf/syscall/src/: main.rs
dsti-common/: Cargo.toml
dsti-common/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: build_dsti_agent.rs  build_ebpf.rs  main.rs  run.rs
