[package]
name = "dsti-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dsti-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.32.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
] }
bytes = "1"
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
#aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
dsti-common = { path = "../dsti-common", features=["user"]}
anyhow = "1.0.75"
env_logger = "0.11.3"
rlimit = "0.10.1"
libc = "0.2"
dashmap = "5.5.0"
log = "0.4.20"
once_cell = "1.8.0"
reqwest = {version = "0.12.1"}
